tests/run/error_assert_type.out
tests/run/error_assert_type.em:3:5: error: assert's condition must be a bool
