tests/run/error_assert_type.em
// error_assert_type.em — assert's condition must be a bool (verification loop, §5j).
fn main() -> int {
    assert(5)
    return 0
}
